--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ article, .imgbox, .tools, .houseimg {
     border-top-right-radius: 4px;
 }
 
-article, button {
+article, button, article a {
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
 }
@@ -91,7 +91,7 @@ article ul {
     padding-bottom: 0;
 }
 
-article button{
+article a{
     width: 100%;
     border: none;
     color: white;
@@ -101,6 +101,7 @@ article button{
     bottom: 0;
     left: 0;
     cursor: pointer;
+    text-decoration: none;
 }
 
 ul li, .slash {
@@ -111,7 +112,8 @@ ul li, .slash {
 
 nav {
     display: flex;
-    align-items: center;
+    align-items:center;
+    user-select: none;
 }
 
 ul li span {
